--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --padding-site: 3.65rem;
+  --padding-site: clamp(1rem, 5vw, 3.65rem);
 }
 
 @theme inline {
@@ -18,4 +18,19 @@
 body {
   background: var(--background);
   color: var(--foreground);
+}
+
+/* globals.css */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.2);
 }
