Fix: Finalized Tailwind v4 theme variables and color mapping

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --authorname:#a7a4a4;
   --readmore-link:#7a5f1f;
   --progressbar:#4b2b07;
-  --progresindicator:#a6c365;
+  --progresindicator:#aec382;
   --progressline:hsl(91, 100%, 15%);
 /*   --recomedations:#d6d8d0;
   --background: #ffffff;
